buildscript {
	ext {
		springBootVersion = '2.0.6.RELEASE'
	}
	repositories {
		mavenCentral()
	}
	dependencies {
		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
	}
}

apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'

group = 'com.myseotoolbox'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = 1.8

repositories {
	mavenCentral()
}

task getProjectProperties {
	doLast {
		println rootProject.group + ":" + rootProject.name + ":" + rootProject.version + ":" + rootProject.name
	}
}


dependencies {
	implementation('org.springframework.boot:spring-boot-starter-actuator')
	implementation('org.springframework.boot:spring-boot-starter-web')
	implementation('org.springframework.boot:spring-boot-starter-data-mongodb')

	implementation group: 'commons-lang', name: 'commons-lang', version: '2.2'
	implementation group: 'commons-io', name: 'commons-io', version: '2.6'
	implementation('org.jsoup:jsoup:1.11.3')
	implementation 'com.panforge:robots:1.4.0'


	implementation group: 'io.vavr', name: 'vavr', version: '0.9.3'
	compile 'org.projectlombok:lombok'
	compile group: 'com.google.code.findbugs', name: 'jsr305', version: '3.0.2'

	testImplementation('de.flapdoodle.embed:de.flapdoodle.embed.mongo:2.1.1')
	testImplementation('org.eclipse.jetty:jetty-server:9.4.8.v20171121')
	testImplementation('org.springframework.boot:spring-boot-starter-test')
}
